# DynoAI_3

./: .coverage  .cursorrules.md  .dockerignore  .env  .env.docker  .env.example  .env.production.example  .env.staging.example  .flake8  .gitignore  .pre-commit-config.yaml  400_ERROR_EXPLANATION.md  404_ISSUE_EXPLAINED.md  AFR_CALIBRATION_IMPLEMENTATION_SUMMARY.md  AGENT_PROMPTS_CLOSED_LOOP_DEBUGGING.md  AGENT_PROMPTS_INDEX.md  AGENT_PROMPTS_SUMMARY.md  ALL_BUGS_FIXED_SUMMARY.md  AUDIO_QUICK_TEST.txt  AUDIO_TEST_INSTRUCTIONS.md  BUG_FIX_IDLE_RUNAWAY.md  CHANGELOG-ziggle.md  CHANGELOG.md  COMMIT_SUMMARY_VE_HEATMAP.md  COMPLETE_VIRTUAL_TUNING_SYSTEM.md  CONFIDENCE_SCORING_FINAL_SUMMARY.md  CONFIDENCE_SCORING_QUICK_REFERENCE.md  CONTRIBUTING.md  DECEL_MANAGEMENT_COMMIT_SUMMARY.md  DECEL_TUNING_REALISTIC.md  DEPENDENCY_AUDIT_REPORT.md  DEPENDENCY_FIX_PLAN.sh  DOCKER.md  DOCKER_ARCHITECTURE.md  DOCKER_FILES_SUMMARY.md  DOCKER_FIX_INSTRUCTIONS.md  DOCKER_MIGRATION.md  DOCKER_MIGRATION_COMPLETE.md  DOCKER_QUICKSTART.md  Dockerfile  (+147 more)
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  auto-assign.yml  dependabot.yml  labeler.yml
DynoAI_3-main/: .dynoai_v3_manifest.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  VE_HEATMAP_IMPLEMENTATION_COMPLETE.md  mypy.ini  requirements.txt  ve_operations.py
api/: Attached HTML and CSS Context.txt  __init__.py  admin.py  app-ziggle.py  app.py  auth.py  config.py  docs.py  errors.py  health.py  logging_config.py  metrics.py  middleware.py  rate_limit.py  reliability_agent.py  reliability_helpers.py  reliability_integration.py  requirements-ziggle.txt  requirements.txt
config/: README.md  afr_calibration.json  dyno-env-template.txt  dynoware_rt150.json  env.docker  env.example  env.production  env.staging  ingestion.json  jetstream.json  pvv_template.pvv  shop_branding.json
core/: README.md
docs/: ACCELERATION_TUNING_REALISTIC.md  AFR_CALIBRATION_GUIDE.md  AFR_VOICE_FEEDBACK_TEST_GUIDE.md  AFR_VOICE_INTEGRATION_DIAGRAM.md  AGENT_PROMPTS_ASYNC_PROGRESS_PATTERNS.md  AGENT_PROMPTS_JETDRIVE_REALTIME_FEATURES.md  AI_TRAINING_DATA_COMPLETE.md  AI_TRAINING_DATA_GUIDE.md  AI_TRAINING_DATA_SUMMARY.md  AI_TRAINING_QUICK_START.md  AI_TRAINING_SECURITY_REVIEW.md  AI_VOICE_ASSISTANT.md  API_AUTHENTICATION.md  AUDIO_ENGINE.md  AUDIO_IMPLEMENTATION_SUMMARY.md  AUDIO_QUICK_START.md  AUTOMATION_SCRIPTING_GUIDE.md  CHANGELOG_2025-12-08.md  CHATGPT_EXAMPLES.md  CLAUDE_RAILS.md  CLEANUP.md  CLOSED_LOOP_TUNING.md  COMPLETE_VIRTUAL_TUNING_SYSTEM.md  CONFIDENCE_SCORING_JETDRIVE_INTEGRATION.md  CONFIDENCE_SCORING_UI_INTEGRATION.md  CONFIDENCE_SCORING_UI_TEST_GUIDE.md  CONFIDENCE_SCORING_UI_VISUAL_GUIDE.md  COPILOT_SETUP.md  DATA_VALIDATION_IMPLEMENTATION_STATUS.md  DEEPCODE_INTEGRATION_README.md  DETERMINISTIC_MATH_SPECIFICATION.md  DIAGNOSTIC_REPORT.md  DYNOAI3_SYSTEM_AUDIT.md  DYNOAI_AGENT_PROMPTS.md  DYNOAI_ARCHITECTURE_OVERVIEW-ziggle.md  DYNOAI_ARCHITECTURE_OVERVIEW.md  Dyno_AI_Tuner_v1_2_README.txt  ENHANCEMENTS_QUICK_REFERENCE.md  FIND_ME_POWER_UI_INTEGRATION.md  FIND_POWER_QUICK_START.md  (+64 more)
dynoai/: __init__-ziggle.py  __init__.py  constants.py  test_utils.py  version.py
examples/: virtual_ecu_demo.py
experiments/: FXDLS_Wheelie_Spark_Delta-1.csv  README.md  agent_explore.py  baseline_generator.py  baseline_metrics.json  compare_ve_grids.py  k2_experiment.py  kernel_metrics.py  knock_output.csv  run_experiment.py  test_realistic.csv  test_registry.py
external_scrapers/: cli.py  dynojet_scraper.py  dynojet_site_scraper.py  fuelmoto_university_scraper.py  winpep_synthesizer.py
frontend/: Dockerfile  FRONTEND_BLOAT_AUDIT.sh  OPTIMIZATION_CHANGELOG.md  OPTIMIZATION_SUMMARY.md  PERFORMANCE_OPTIMIZATIONS.md  PRD.md  QUICK_OPTIMIZATION_REFERENCE.md  README_OPTIMIZATIONS.md  UI_OPTIMIZATION_COMPLETE.md  eslint.config.js  livelink-test.html  nginx.conf  package-lock-ziggle.json  package-lock.json  package.json  vite.config.ts
gui/: __init__.py  app.py  main.py  requirements.txt  test_shadow_suite.py
k8s/: api.yaml  frontend-configmap.yaml  frontend.yaml  namespace.yaml  redis.yaml  storage.yaml
migrations/: README  env.py  script.py.mako
runs/: index.json
scripts/: analyze_jetdrive_run.py  analyze_wp8.py  auto-configure-jetdrive.ps1  benchmark_realtime_analysis.py  build_exe.py  calibrate_afr.py  calibration_monitor.py  capture_both_sensors_22_4.py  capture_long_stream.py  check-jetdrive-status.ps1  check_innovate_connection.py  clean_workspace.py  compare_packets.py  debug_innovate_data.py  debug_sensor_b.py  decode_innovate_data.py  decode_mts_data.py  discover_dyno_multicast.py  dlg1_accuracy_test.py  export_public_repo.ps1  external_data_ingestion.py  find-dyno-interface.ps1  find_afr_in_packet.py  free-ram.ps1  generate_timeline_test_data.py  innovate_decode_test.py  innovate_mts_decoder.py  innovate_program_capture.py  innovate_protocol_sniffer.py  innovate_sniffer.py  innovate_wake_test.py  jetdrive_autotune.py  jetdrive_discover.py  jetdrive_hardware_test.py  live_dyno_monitor.py  materialize_v3.py  (+27 more)
(+1006 files in other folders)
